--- a/src/components/Tile.module.css
+++ b/src/components/Tile.module.css
@@ -19,6 +19,7 @@
 	caret-color: transparent;
 	user-select: none;
 	z-index: 2;
+	background-color: var(--tile-bg);
 }
 @media (max-width: 600px) {
 	.tile {
